tests/diagnostics/file_roles/exports_declarations/in_library/expect.txt
# exit: 1
lib.coppice:1:1: error: exports declarations are only allowed in PACKAGE.coppice
  exports { Token }
  ^
